--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,10 @@
         "branch-alias": {
             "dev-master": "2.4-dev"
         }
+
+
+{
+    "extra": {
         "heroku": {
             "document-root": "web",
             "php-config": [
@@ -59,6 +63,8 @@
                 "short_open_tag=off"
             ]
         }
+    }
+}
 
     },
     "require-dev": {
